--- a/src/ui.html
+++ b/src/ui.html
@@ -1,4 +1,4 @@
 <div class="continer">
-	<ul class="disclosure">
-	</ul>
+	<ul class="disclosure"></ul>
+	<p class="last-update">Last update 18.09.2019</p>
 </div>
