--- a/src/ui.html
+++ b/src/ui.html
@@ -48,9 +48,7 @@
 	</div>
 
 	<div class="divider"></div>
-	
 	<div class="row section-title">Links</div>
-
 	<div class="list">
 		<a class="row item" href="https://www.producthunt.com/posts/social-media-image-plugin" target="_blank">
 			<div class="item__img"><img src="<%= require('./img/producthunt.jpg') %>" alt=""></div>
@@ -63,9 +61,16 @@
 	</div>
 
 	<div class="divider"></div>
-
 	<div class="row section-title">Other author plugins</div>
 	<div class="list">
+		<a class="row item" href="https://www.figma.com/c/plugin/780000661582724634/Rotate-Origin" target="_blank">
+			<div class="item__img"><img src="<%= require('./img/rotate-origin.jpg') %>" alt=""></div>
+			<div class="item__title">Rotate Origin</div>
+		</a>
+		<a class="row item" href="https://www.figma.com/c/plugin/763500131554051614/Guides-inspector" target="_blank">
+			<div class="item__img"><img src="<%= require('./img/guides-inspector.jpg') %>" alt=""></div>
+			<div class="item__title">Guides inspector</div>
+		</a>
 		<a class="row item" href="https://www.figma.com/c/plugin/739517744595900126/Substrate-for-text-2.0" target="_blank">
 			<div class="item__img"><img src="<%= require('./img/substrate-for-text.jpg') %>" alt=""></div>
 			<div class="item__title">Substrate for text</div>
@@ -81,9 +86,7 @@
 	</div>
 
 	<div class="divider"></div>
-	
 	<div class="row section-title">You can say thanks to the author...</div>
-
 	<div class="list">
 		<a class="row item" href="https://paypal.me/andreslav" target="_blank">
 			<div class="item__img"><img src="<%= require('./img/paypal.jpg') %>" alt=""></div>
