--- a/src/ui.html
+++ b/src/ui.html
@@ -55,7 +55,7 @@
 				<div class="item__img"><img src="<%= require('./img/producthunt.jpg') %>" alt=""></div>
 				<div class="item__title">This plugin on Producthunt</div>
 			</a>
-			<a class="row item" href="https://www.figma.com/c/plugin/750116735703341112" target="_blank">
+			<a class="row item" href="https://www.figma.com/community/plugin/750116735703341112" target="_blank">
 				<div class="item__img"><img src="<%= require('./img/social-media-Image.png') %>" alt=""></div>
 				<div class="item__title">Homepage of this plugin</div>
 			</a>
@@ -64,29 +64,33 @@
 		<div class="divider"></div>
 		<div class="row section-title">Other author plugins</div>
 		<div class="list">
-			<a class="row item" href="https://www.figma.com/c/plugin/780000661582724634" target="_blank">
-				<div class="item__img"><img src="<%= require('./img/rotate-origin.jpg') %>" alt=""></div>
-				<div class="item__title">Rotate Origin</div>
+			<a class="row item" href="https://www.figma.com/community/plugin/792025380269016893" target="_blank">
+				<div class="item__img"><img src="<%= require('./img/filter.jpg') %>" alt=""></div>
+				<div class="item__title">Filter</div>
 			</a>
-			<a class="row item" href="https://www.figma.com/c/plugin/792767780551514994" target="_blank">
+			<a class="row item" href="https://www.figma.com/community/plugin/792767780551514994" target="_blank">
 				<div class="item__img"><img src="<%= require('./img/select-similar.jpg') %>" alt=""></div>
 				<div class="item__title">Select Similar</div>
 			</a>
-			<a class="row item" href="https://www.figma.com/c/plugin/763500131554051614" target="_blank">
+			<a class="row item" href="https://www.figma.com/community/plugin/763500131554051614" target="_blank">
 				<div class="item__img"><img src="<%= require('./img/guides-inspector.jpg') %>" alt=""></div>
 				<div class="item__title">Guides inspector</div>
 			</a>
-			<a class="row item" href="https://www.figma.com/c/plugin/739517744595900126" target="_blank">
+			<a class="row item" href="https://www.figma.com/community/plugin/739517744595900126" target="_blank">
 				<div class="item__img"><img src="<%= require('./img/substrate-for-text.jpg') %>" alt=""></div>
 				<div class="item__title">Substrate for text</div>
 			</a>
-			<a class="row item" href="https://www.figma.com/c/plugin/745971189153303901" target="_blank">
+			<a class="row item" href="https://www.figma.com/community/plugin/745971189153303901" target="_blank">
 				<div class="item__img"><img src="<%= require('./img/wave-and-curve.png') %>" alt=""></div>
 				<div class="item__title">Wave & Сurve</div>
 			</a>
-			<a class="row item" href="https://www.figma.com/c/plugin/773875667263247070" target="_blank">
+			<a class="row item" href="https://www.figma.com/community/plugin/773875667263247070" target="_blank">
 				<div class="item__img"><img src="<%= require('./img/snap-to-grid.jpg') %>" alt=""></div>
 				<div class="item__title">Snap to Grid</div>
+			</a>
+			<a class="row item" href="https://www.figma.com/community/plugin/780000661582724634" target="_blank">
+				<div class="item__img"><img src="<%= require('./img/rotate-origin.jpg') %>" alt=""></div>
+				<div class="item__title">Rotate Origin</div>
 			</a>
 		</div>
 
