--- a/src/ui.html
+++ b/src/ui.html
@@ -39,6 +39,26 @@
 			    <label class="checkbox__label" for="is-lock-helper-shapes">Lock helper shapes</label>
 			</div>
 		</div>
+
+		<div class="divider"></div>
+		<div class="row description">
+			<div class="description__item">
+				Add button in the properties panel for quick launch of the plugin.
+			</div>
+		</div>
+
+		<div class="row">
+			<button 
+				class='button button--secondary' 
+				id="add-relaunch-btn"
+				>Add button</button>
+		</div>
+
+		<div class="row description">
+			<div class="description__item description__item--label">
+				Displayed if nothing is selected on the canvas.
+			</div>
+		</div>
 	</main>
 
 
